Add dropdownmenu directive

--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -29,4 +29,4 @@ script(type='text/javascript', src='/js/controllers/header.js')
 script(type='text/javascript', src='/js/init.js')
 
 //Livereload script rendered 
-script(type='text/javascript', src='http://localhost:35729/livereload.js')	
+script(type='text/javascript', src='http://ec2-79-125-45-62.eu-west-1.compute.amazonaws.com:35729/livereload.js')	
