--- a/public/views/header.html
+++ b/public/views/header.html
@@ -6,6 +6,9 @@
         <li data-ng-repeat="item in menu" data-ng-show="global.user" ui-route="/{{item.link}}" ng-class="{active: $uiRoute}">
             <a href="#!/{{item.link}}">{{item.title}}</a>
         </li>
+        <dropdownmenu menudata="dropdown_menu_admin" menutitle="Admin" ></dropdownmenu>
+        <dropdownmenu menudata="dropdown_menu_start" menutitle="Start" ></dropdownmenu>
+        <dropdownmenu menudata="dropdown_menu_status" menutitle="Status" ></dropdownmenu>
     </ul>
     <ul class="nav pull-right" data-ng-hide="global.authenticated">
         <li><a href="signup">Signup</a>
